crates/willikins-core/tests/it/snapshots/it__schema_generation__description_schema_generates.snap
---
source: crates/willikins-core/tests/it/schema_generation.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "Description",
  "description": "The result of resolving [`PartialInputs`] against a [`Checked`]\nworkflow's declared inputs.",
  "type": "object",
  "properties": {
    "awaiting": {
      "description": "Every declared [`willikins_types::OperatorAcknowledgement`]-typed\ninput describe found no raw value for, in declaration order. Skipped\nwhen serializing if empty (decision (j), point 6), the same\nconvention as [`crate::plan::Plan::blocked`], so a document with no\nawaited input serializes exactly as it did before G3.\n\n`default` as well, though nothing deserializes this type: the JSON\nSchema the MCP server publishes as a tool's `outputSchema` is built for\nthe deserialize contract, which lists every field without a serde\ndefault as `required` -- and a skipped field that is `required`\nmakes every result without it fail its own published schema\n(`crates/willikins-server/tests/mcp_output_schema_conformance.rs`).",
      "type": "array",
      "items": {
        "$ref": "#/$defs/AwaitingInput"
      }
    },
    "errors": {
      "description": "Every rejected raw value or unrecognised input name, in the order\ndocumented on [`describe`].",
      "type": "array",
      "items": {
        "$ref": "#/$defs/InputError"
      }
    },
    "missing": {
      "description": "Every declared input with neither a raw value nor a default, in\ndeclaration order. Never includes an\n[`willikins_types::OperatorAcknowledgement`]-typed input -- see\n[`Self::awaiting`].",
      "type": "array",
      "items": {
        "$ref": "#/$defs/MissingInput"
      }
    },
    "resolved": {
      "description": "Every input that resolved to a concrete [`Value`]: a parsed raw\nvalue, or a declared default. In declaration order. **Includes**\nevery *fixed* input (milestone 2b, decision (d6)), holding its\nused document's own default: `willikins-server`'s `Butler::plan`\npasses this map straight to `plan`, which needs a fixed input's\nvalue to bind every reference to it inside the document that fixed\nit. Only the agent-facing surfaces built over `Description` (the\nMCP `describe` response, the CLI's `describe` output,\n`WorkflowSummary.inputs`) omit a fixed input — this field itself\nnever does.",
      "type": "object",
      "additionalProperties": false,
      "patternProperties": {
        "^[a-z][a-z0-9_]*(/[a-z][a-z0-9_]*)*$": {
          "$ref": "#/$defs/Value"
        }
      }
    }
  },
  "required": [
    "errors",
    "missing",
    "resolved"
  ],
  "$defs": {
    "AwaitingInput": {
      "description": "A declared input of type [`willikins_types::OperatorAcknowledgement`]\n`describe` found no raw value for.\n\nNever `missing`, and never carries a default (`check` refuses one, see\n[`crate::check::CheckError::AcknowledgementDefault`]): this type exists\nso a gate can ask the operator, and an unsupplied one is *awaited*, not\nan error blocking `plan` -- see\n`docs/plans/2026-09-27-milestone-3e-new-ios-app.md`, decision (j), point\n6.",
      "type": "object",
      "properties": {
        "document_description": {
          "description": "The input's own one-line description, verbatim from the document,\nif it declared one. Document text, not willikins' own words -- see\nthe module docs' \"Document text is data\".",
          "anyOf": [
            {
              "$ref": "#/$defs/Description"
            },
            {
              "type": "null"
            }
          ]
        },
        "example": {
          "description": "A valid example value for the type: always `done`.",
          "type": "string"
        },
        "name": {
          "description": "The awaited input's name.",
          "$ref": "#/$defs/InputName"
        },
        "prompt": {
          "description": "A one-sentence question naming the input and the value that\nsatisfies it (`done`), willikins' own words only.",
          "type": "string"
        },
        "ty": {
          "description": "Its declared type -- always `OperatorAcknowledgement`, carried for\nthe same reason [`MissingInput::ty`] is.",
          "$ref": "#/$defs/TypeRef"
        }
      },
      "required": [
        "name",
        "ty",
        "example",
        "prompt"
      ]
    },
    "Description": {
      "description": "A free-text description shown to an agent, at most 1,024 characters.",
      "type": "string",
      "examples": [
        "Provision a GitHub repository and Doppler project for a Rust service."
      ],
      "maxLength": 1024
    },
    "InputError": {
      "description": "Why one raw input, or one unrecognised input name, was rejected.",
      "type": "object",
      "properties": {
        "error": {
          "description": "Why it was rejected, exactly as the type's own parser reported it:\n`describe` adds nothing and removes nothing. For a *non-secret*\ntype that message typically quotes the offending raw text, which is\nintended — it is the caller's own value, and an agent needs to see\nwhat it got wrong.\n\nA *secret* raw value can never be echoed here, and not because this\ntype filters one out: a secret-typed workflow input cannot exist in\na successfully [`Checked`] workflow at all (`check` reports\n`SecretWorkflowInput` first), and the registry refuses a secret type\nbefore it looks at the text, so [`Value::parse`] never hands one to\na parser.",
          "$ref": "#/$defs/ParseError"
        },
        "input": {
          "description": "The input name the raw value was supplied for — declared or not.",
          "$ref": "#/$defs/InputName"
        }
      },
      "required": [
        "input",
        "error"
      ]
    },
    "InputName": {
      "type": "string",
      "pattern": "^[a-z][a-z0-9_]*(/[a-z][a-z0-9_]*)*$"
    },
    "MissingInput": {
      "description": "A declared input `describe` found neither a raw value nor a default for.",
      "type": "object",
      "properties": {
        "default": {
          "description": "The input's default value, rendered — always `None` here: an input\nwith a default is never missing (see [`describe`]). Kept as a field\nrather than dropped so `MissingInput` carries the same shape as an\n[`InputSpec`] would, in case a future revision reports an input as\n\"missing but defaulted\" for some other reason; a plan defect, not\nexercised by any test today.",
          "type": [
            "string",
            "null"
          ]
        },
        "document_description": {
          "description": "The input's own one-line description, verbatim from the document,\nif it declared one. This is document text, not willikins' own\nwords — see the module docs' \"Document text is data\" — so it is\nnamed `document_*` and never folds into [`Self::prompt`].\n\nVerbatim is what a caller reading JSON gets, where a string is a\nstring and cannot escape its field. A caller reading a\nline-oriented rendering of this struct needs more than a label: the\nCLI's text renderer prefixes the text `document says:` *and*\nescapes it onto that one line, because a description carrying a\nline terminator would otherwise forge a line of willikins' own.",
          "anyOf": [
            {
              "$ref": "#/$defs/Description"
            },
            {
              "type": "null"
            }
          ]
        },
        "example": {
          "description": "A valid example value for the type, from the registry.",
          "type": "string"
        },
        "name": {
          "description": "The missing input's name.",
          "$ref": "#/$defs/InputName"
        },
        "prompt": {
          "description": "A one-sentence question an agent could ask a human to fill this\ninput in, built from the name, the type's own registry\ndescription, and the example — willikins' own words only; see the\nmodule docs. Never contains [`Self::document_description`].",
          "type": "string"
        },
        "schema": {
          "description": "JSON schema for the type, from the registry's [`willikins_types::TypeInfo`].",
          "type": "object"
        },
        "ty": {
          "description": "Its declared type.",
          "$ref": "#/$defs/TypeRef"
        }
      },
      "required": [
        "name",
        "ty",
        "schema",
        "example",
        "prompt"
      ]
    },
    "ParseError": {
      "description": "Error returned when a string does not parse as a domain type.",
      "type": "object",
      "properties": {
        "reason": {
          "description": "Why it was rejected. Never contains the rejected value of a secret type.",
          "type": "string"
        },
        "type_name": {
          "description": "The domain type that rejected the input.",
          "type": "string"
        }
      },
      "required": [
        "type_name",
        "reason"
      ]
    },
    "TypeRef": {
      "type": "string",
      "pattern": "^(?:[A-Z][A-Za-z0-9]*|list<[A-Z][A-Za-z0-9]*>)$"
    },
    "Value": {
      "type": "object",
      "properties": {
        "list": {
          "type": "boolean"
        },
        "masked": {
          "const": true
        },
        "redacted": {
          "const": true
        },
        "state": {
          "type": "string",
          "enum": [
            "known",
            "unknown"
          ]
        },
        "type": {
          "type": "string"
        },
        "value": {
          "anyOf": [
            {
              "type": "string"
            },
            {
              "type": "array",
              "items": {
                "type": "string"
              }
            }
          ]
        }
      },
      "additionalProperties": false,
      "allOf": [
        {
          "else": {
            "required": [
              "value"
            ]
          },
          "if": {
            "properties": {
              "state": {
                "const": "unknown"
              }
            },
            "required": [
              "state"
            ]
          },
          "then": {
            "not": {
              "anyOf": [
                {
                  "required": [
                    "value"
                  ]
                },
                {
                  "required": [
                    "redacted"
                  ]
                }
              ]
            }
          }
        },
        {
          "else": {
            "properties": {
              "value": {
                "type": "array",
                "items": {
                  "type": "string"
                }
              }
            }
          },
          "if": {
            "properties": {
              "list": {
                "const": false
              }
            },
            "required": [
              "list"
            ]
          },
          "then": {
            "properties": {
              "value": {
                "type": "string"
              }
            }
          }
        }
      ],
      "required": [
        "type",
        "list",
        "state"
      ]
    }
  }
}
