crates/willikins-core/tests/it/snapshots/it__schema_generation__missing_input_schema_generates.snap
---
source: crates/willikins-core/tests/it/schema_generation.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "MissingInput",
  "description": "A declared input `describe` found neither a raw value nor a default for.",
  "type": "object",
  "properties": {
    "default": {
      "description": "The input's default value, rendered — always `None` here: an input\nwith a default is never missing (see [`describe`]). Kept as a field\nrather than dropped so `MissingInput` carries the same shape as an\n[`InputSpec`] would, in case a future revision reports an input as\n\"missing but defaulted\" for some other reason; a plan defect, not\nexercised by any test today.",
      "type": [
        "string",
        "null"
      ]
    },
    "document_description": {
      "description": "The input's own one-line description, verbatim from the document,\nif it declared one. This is document text, not willikins' own\nwords — see the module docs' \"Document text is data\" — so it is\nnamed `document_*` and never folds into [`Self::prompt`].\n\nVerbatim is what a caller reading JSON gets, where a string is a\nstring and cannot escape its field. A caller reading a\nline-oriented rendering of this struct needs more than a label: the\nCLI's text renderer prefixes the text `document says:` *and*\nescapes it onto that one line, because a description carrying a\nline terminator would otherwise forge a line of willikins' own.",
      "anyOf": [
        {
          "$ref": "#/$defs/Description"
        },
        {
          "type": "null"
        }
      ]
    },
    "example": {
      "description": "A valid example value for the type, from the registry.",
      "type": "string"
    },
    "name": {
      "description": "The missing input's name.",
      "$ref": "#/$defs/InputName"
    },
    "prompt": {
      "description": "A one-sentence question an agent could ask a human to fill this\ninput in, built from the name, the type's own registry\ndescription, and the example — willikins' own words only; see the\nmodule docs. Never contains [`Self::document_description`].",
      "type": "string"
    },
    "schema": {
      "description": "JSON schema for the type, from the registry's [`willikins_types::TypeInfo`].",
      "type": "object"
    },
    "ty": {
      "description": "Its declared type.",
      "$ref": "#/$defs/TypeRef"
    }
  },
  "required": [
    "name",
    "ty",
    "schema",
    "example",
    "prompt"
  ],
  "$defs": {
    "Description": {
      "description": "A free-text description shown to an agent, at most 1,024 characters.",
      "type": "string",
      "examples": [
        "Provision a GitHub repository and Doppler project for a Rust service."
      ],
      "maxLength": 1024
    },
    "InputName": {
      "type": "string",
      "pattern": "^[a-z][a-z0-9_]*(/[a-z][a-z0-9_]*)*$"
    },
    "TypeRef": {
      "type": "string",
      "pattern": "^(?:[A-Z][A-Za-z0-9]*|list<[A-Z][A-Za-z0-9]*>)$"
    }
  }
}
