crates/willikins-core/tests/it/snapshots/it__schema_generation__node_status_schema_generates.snap
---
source: crates/willikins-core/tests/it/schema_generation.rs
assertion_line: 34
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "NodeStatus",
  "description": "What happened to one planned node instance during [`apply`].\n\nDerives [`serde::Deserialize`] as well as `Serialize`: unlike most\ntypes in this module, a `NodeStatus` never holds a [`crate::value::Value`]\n(its only payload, [`ToolError`], is a plain message with no secret\nobligation of its own — see that type's doc), so round-tripping it\nthrough JSON cannot resurrect anything redaction hid. `willikins-journal`\nrelies on this to store a `NodeFinished` event's `status` field\nuntouched, rather than behind its `Redacted` wrapper the way `outputs`\n(which does carry [`Value`]s) must be.",
  "oneOf": [
    {
      "description": "A pure tool computed its outputs; there was nothing to create or\nleave alone.",
      "type": "object",
      "properties": {
        "kind": {
          "type": "string",
          "const": "computed"
        }
      },
      "required": [
        "kind"
      ]
    },
    {
      "description": "`ensure` reported [`Ensured::changed`] `true`.",
      "type": "object",
      "properties": {
        "kind": {
          "type": "string",
          "const": "created"
        }
      },
      "required": [
        "kind"
      ]
    },
    {
      "description": "`ensure` reported [`Ensured::changed`] `false`.",
      "type": "object",
      "properties": {
        "kind": {
          "type": "string",
          "const": "unchanged"
        }
      },
      "required": [
        "kind"
      ]
    },
    {
      "description": "A required input was [`crate::value::ValueState::Unknown`] and the\nplanned action was [`Action::NoOp`]: the resource already matches,\nby the plan's own observation, and nothing was called.",
      "type": "object",
      "properties": {
        "kind": {
          "type": "string",
          "const": "converged"
        }
      },
      "required": [
        "kind"
      ]
    },
    {
      "description": "`ensure` returned an error.",
      "type": "object",
      "properties": {
        "error": {
          "description": "The failure `ensure` reported.",
          "$ref": "#/$defs/ToolError"
        },
        "kind": {
          "type": "string",
          "const": "failed"
        }
      },
      "required": [
        "kind",
        "error"
      ]
    },
    {
      "description": "This instance's own planned [`Action`] was [`Action::Blocked`]: a\n[`crate::tool::Gate`] read [`crate::tool::Observation::Absent`]. No\ntool was called; the operator must act and the run must be\nre-planned. See decision (j),\n`docs/plans/2026-09-27-milestone-3e-new-ios-app.md`.",
      "type": "object",
      "properties": {
        "kind": {
          "type": "string",
          "const": "blocked"
        }
      },
      "required": [
        "kind"
      ]
    },
    {
      "description": "This instance's own planned [`Action`] was [`Action::Skip`]: it\nbinds a [`Self::Blocked`] or [`Self::Skipped`] node, directly or\ntransitively, so it was never read or called. Distinct from\n[`Self::NotRun`], which means the *run itself* stopped before\nreaching this instance — a `Skipped` instance was reached, and the\nrest of the run continued past it.",
      "type": "object",
      "properties": {
        "kind": {
          "type": "string",
          "const": "skipped"
        }
      },
      "required": [
        "kind"
      ]
    },
    {
      "description": "This instance was never attempted: an earlier instance in the same\nrun failed, and the run stopped there.",
      "type": "object",
      "properties": {
        "kind": {
          "type": "string",
          "const": "not_run"
        }
      },
      "required": [
        "kind"
      ]
    }
  ],
  "$defs": {
    "ToolError": {
      "description": "A tool's failure to `read` or `ensure`.\n\nNever includes an input value: an implementation must build `message`\nfrom the tool's own state and provider response, not from the\n[`Inputs`] it was given, so this type carries no obligation for callers\nto redact it themselves.",
      "type": "object",
      "properties": {
        "kind": {
          "description": "The kind of failure.",
          "$ref": "#/$defs/ToolErrorKind"
        },
        "message": {
          "description": "A human-readable explanation. Never a secret value.",
          "type": "string"
        }
      },
      "required": [
        "kind",
        "message"
      ]
    },
    "ToolErrorKind": {
      "description": "The kind of failure a [`Tool`] reported.",
      "oneOf": [
        {
          "description": "The resource `ensure` was asked to act on does not exist.",
          "type": "string",
          "const": "NotFound"
        },
        {
          "description": "The resource exists but not in the state the tool was asked to\nbring it to, and the tool will not overwrite it.",
          "type": "string",
          "const": "Conflict"
        },
        {
          "description": "The underlying provider reported a failure.",
          "type": "string",
          "const": "Provider"
        },
        {
          "description": "The tool's inputs are not valid, independent of any provider.",
          "type": "string",
          "const": "Invalid"
        }
      ]
    }
  }
}
